plugins/screencast: on close, reset screencast sources instead of just pausing

As the screencast being closed may also trigger the virtual output to be
removed, keeping the source around can cause crashes, as the source contains
output layers for that virtual output.

BUG: 511150